--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -34,8 +34,8 @@
  tribal_succession.2.a:0 "私がハーンだ！"
  tribal_crisis_can_end_when:0 "僭称者の軍がすべて倒された時、危機もまた終焉を迎える。"
  tribal_succession_crisis_non_cores_will_revolt:0 "§R分離独立派の反乱軍§!が[Root.GetName]の非中核州で蜂起するでしょう。"
- ideagroups.1.t:0 "新しい伝統＆野望"
- ideagroups.1.d:0 "すでに我が国における、アイデンティティと理想の急激な変化は一定の範囲を超えてしまっている。積極的に反対しない限り、結果として我が国の野望と伝統が変わるのを目にするだろう。"
+ ideagroups.1.t:0 "新たな伝統と宿願"
+ ideagroups.1.d:0 "我が国は変化し続けており、それは我らのアイデンティティと理想を急激に変化させている。積極的に抗おうとしない限り、我が国の宿願と伝統は変わることになるだろう。"
  ideagroups.1.a:0 "ぜひとも！"
  ideagroups.1.b:0 "いや、我々のルーツを放棄することはできない"
  ideagroups.711.t:0 "鋭気を見せろ"
