--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -187,7 +187,7 @@
  CANCEL_DRILLING_MOVE_CONFIRM_TITLE:0 "訓練を中止"
  CANCEL_DRILLING_MOVE_CONFIRM_DESC:1 "訓練を中止して$ARMY|Y$を移動してもよろしいですか？"
  CANCEL_DRILLING_LOAD_CONFIRM_TITLE:0 "訓練を中止"
- CANCEL_DRILLING_LOAD_CONFIRM_DESC:1 "$NAVY|Y$を移動し、それに接続している陸軍の訓練をキャンセルしてもよろしいですか？"
+ CANCEL_DRILLING_LOAD_CONFIRM_DESC:1 "$NAVY|Y$を移動すると、乗船中の陸軍部隊の訓練がキャンセルされますがよろしいですか？"
  CANCEL_DRILLING_MULTIPLE_CONFIRM_DESC:0 "§Y訓練中§!の部隊を移動しようとしています。\n訓練をキャンセルしてよろしいですか？"
  COUNTRIES_WITH_MERCHANT_IN_NODE:1 "この交易ノードで影響を与える国：\n"
  TRADING_POLICY_MODIFIER:0 "$NAME|Y$の交易政策：$VAL$"
