--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -1321,8 +1321,8 @@
  PHA_ADJ:1 "ウー"
  RJP:0 "ラージプーターナー"
  RJP_ADJ:0 "ラージプーターナー"
- SRH:0 "サラヒンド"
- SRH_ADJ:0 "サラヒンド"
+ SRH:0 "シルヒンド"
+ SRH_ADJ:0 "シルヒンド"
  ILK:0 "イルハン"
  ILK_ADJ:0 "イルハン"
  KLM:0 "カルムイク"
