Save/Update files

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1151,8 +1151,8 @@
  flavor_rus.EVTOPTA3415:1 "真の信仰を[Root.Capital.GetCapitalName]から導こう。"
  flavor_rus.EVTOPTB3415:1 "同胞がコンスタンティノープルを取り戻すのを助けよう。"
  flavor_rus.EVTOPTC3415:0 "トルコ人からコンスタンティノープルを解放することが我らの宿命なのだ！"
- flavor_rus.EVTNAME3416:0 "農民は農奴になる"
- flavor_rus.EVTDESC3416:0 "ボリス・ゴドゥノフは1598年に選出され、フョードルの後継者となった。彼はロシアの領土利益を統合したが、彼が権力を握ってすぐに、干ばつ、飢饉、疫病によりモスクワで50万人が死亡した。農民は彼らの村から逃げ出し、後には雑草が生い茂る土地が残された。これに対応して、ゴドゥノフは、農民が彼らが生まれた土地を離れることを禁じる布告を発した（イヴァン4世は1581年に同様の布告を発している）。農民は名実ともに農奴となった。"
+ flavor_rus.EVTNAME3416:0 "農奴にされる農民"
+ flavor_rus.EVTDESC3416:0 "ボリス・ゴドゥノフは1598年に選出され、フョードルの後継者となった。彼はロシアの領土利益を統合したが、彼が権力を握ってすぐに、干ばつ、飢饉、疫病によりモスクワで50万人が死亡した。農民は彼らの村から逃げ出し、後には雑草が生い茂る土地が残された。これに対してゴドゥノフは、農民が彼らが生まれた土地を離れることを禁じる布告を発した（イヴァン4世も1581年に同様の布告を発している）。農民は名実ともに農奴となったのである。"
  flavor_rus.EVTOPTA3416:0 "農民を農奴化する。"
  flavor_rus.EVTOPTB3416:0 "彼らを農奴にしてはならない。"
  flavor_rus.EVTNAME3417:0 "会議法典による完全な農奴制の実施"
@@ -3431,7 +3431,7 @@
  flavor_mch.EVTOPTA4:0 "弱いうちに攻撃せよ！"
  flavor_mch.EVTOPTB4:0 "いや、そのままにしておこう。"
  flavor_mch.EVTNAME5:0 "三藩の乱"
- flavor_mch.EVTDESC5:1 "Three feudal lords in the south, once Ming generals who have since thrown in their lot with the Manchu, have risen up in rebellion! Ordered to give up their offices and return to Beijing, they have instead conspired against us and raised an army. They declare their cause to be to 'oppose the Qing and restore the Ming', though several lords have proclaimed themselves the true Emperor despite their lack of relation to the Zhu family. A great civil war has begun; we must defend the Qing realm from these traitors!"
+ flavor_mch.EVTDESC5:1 "南の三諸侯、かつて明の将軍であり満州に身を預けた彼らが反旗を翻した！藩の廃止と北京への帰還を命じられたのに反抗し、彼らは結託して軍を起こした。清への抵抗と明の復興を口実とし、明朝皇族との血の繋がりが無いにも関わらず自分らを真の皇帝であると僭称している。大規模な内戦が始まってしまった。裏切り者どもから清を守りぬかねばならない！"
  flavor_mch.EVTOPTA5:0 "彼らは反乱を起こせばいい。"
  flavor_mch.EVTOPTB5:0 "彼らの要求に応じる。"
  flavor_mch.EVTNAME6:0 "イエズス会の追放"
