Save/Update files

--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1337,7 +1337,7 @@
  gen_indian_sikh_punjab_title:0 "パンジャーブの征服"
  gen_indian_sikh_punjab_desc:0 "パンジャーブはシーク教の心臓の鼓動だ。私たちはそれを剣により奪取し、シーク教徒の人々の為に、真の拠点と独立国家を確立せねばならない。"
  gen_indian_sikh_amritsar_title:0 "黄金寺院"
- gen_indian_sikh_amritsar_desc:0 "シーク教は真の精神的な中心、神の素壮大さの明確な標識が欠けてる。新しい都市、アムリトサルを創設し、以前のもの、また将来のものよりもさらに壮大なグルドワーラーを建設するだろう。"
+ gen_indian_sikh_amritsar_desc:0 "シーク教は真の精神的な中心、神の壮大さの明確な標識が欠けている。新しい都市、アムリトサルを創設し、以前のもの、また将来のものよりもさらに壮大なグルドワーラーを建設するだろう。"
  gen_indian_sikh_empire_title:0 "シーク帝国の建立"
  gen_indian_sikh_empire_desc:0 "パンジャーブに精神的な権威が確立されたので、我々の注意を外側に向けるべき時だ。周辺地域支配を拡大し、そうすることでシーク帝国の基盤を築かねばならない。"
  gen_indian_sikh_five_thrones_title:0 "5聖座"
