--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -46,7 +46,7 @@
  aristocratic_court_reform:0 "貴族の宮廷"
  aristocratic_court_reform_desc:0 "貴族は何世紀にもわたって我々に仕え、我々の政府の不可欠な一部となっています。より良い支配、報酬、それら古い貴族からのサポートのために、彼らを王家および王宮と緊密に結びつづけなければなりません。"
  states_general_reform:0 "スターテン・ヘネラール"
- states_general_reform_desc:0 "議会により支配される州の連合体制により、我々は連邦国家結成後の運動とともに、王政を維持したまま、より容易に国家統治を行うことができます。 \n\n選挙やイベントを通じて、§Y議会派§!と§Y君主派§!は国家を支配するために競争します。この政府改革による効果と選挙の頻度は、どちらの派閥が現在支配しているかによって異なります。"
+ states_general_reform_desc:0 "議会により支配される州の連合体制により、我々は連邦国家結成後の運動とともに、君主制を維持したまま、より容易に国家統治を行うことができます。 \n\n選挙やイベントを通じて、§Y議会派§!と§Y君主派§!は国家を支配するために競争します。この政府改革による効果と選挙の頻度は、どちらの派閥が現在支配しているかによって異なります。"
  general_estates_reform:0 "三部会"
  general_estates_reform_desc:0 "それぞれの階級の古代からの特権は尊重されなければならず、また、立法における彼らの役割は強化されなければなりません。我々の偉大な支配者を助言、輔弼させるため、それぞれの階級の代表者を定期的に招集しましょう。"
  absolute_rule_vs_constitutional:0 "絶対主義と立憲主義"
