Save/Update files

--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -2131,7 +2131,7 @@
  polish_tercioDESCR:0 "テルシオはヨーロッパの戦場を支配するようになったが、東ヨーロッパのより開けた騎兵が支配した戦場では、当初、それはあまりにも遅かった。しかし、テルシオのパイクの構成から脱却し火力が増加すると、東部の戦場ではより有用になった。"
  polish_winged_hussarDESCR:0 "中世においては、騎士が中世の戦場を支配していたが、その後、マスケット兵やパイク兵に置き換えられた。17世紀には、騎兵隊は未だ戦闘で驚くべき効果を得るために利用されてはいたが、訓練されたパイク兵に対してはその可能性がほとんどなかった。したがって、騎兵の軍隊は西ヨーロッパでほとんど使われていなかった。広大なステップを持つ東ヨーロッパでは、騎兵は依然として非常に重要で、有翼重騎兵がその役割を果たした。ポーランド人は優れた湾曲したサーベル（パラシュ）を開発し、速度と持久力に特化した馬を選び、パイク兵の鎧を貫くことのできる6メートルの槍を携帯した。有翼重騎兵は、さまざまな敵に対して数え切れないほどの勝利を収める中で、重武装化していった。彼らはヤン・ソビェスキが1683年にトルコによるウィーン包囲を解放した際に重要な役割を果たした。ヤン・ソビェスキは四つの重騎兵集団を猛烈な勢いで送り込み、トルコの戦列を破壊し混乱させた。有翼重騎兵によるこの勝利により、ヤン・ソビェスキが「ウィーンの救世主」と称賛されるのを目撃させたのである。"
  prussian_uhlanDESCR:0 "最初のウーランは18世紀初頭に創設された。それらは主に重装甲騎兵の偵察に利用されたほか、小規模な戦闘に割り当てられた。 18世紀後半には、軽武装による戦場での素早さと機敏さ及び、敵に対する高い白兵力のために、軍隊の構造において不可欠な一部となり、いくつかの戦闘では形成を変えることもあった。 彼らは重い打撃だけでなく、より費用対効果の高いものであったため、ウーランは大規模な歩兵部隊に対する代替えとして良い選択肢であった。徒歩兵もまた、馬に乗った彼らに比べて遅かったために、より小さな国家でも、より少ない人的資源で、実際に効果的な戦闘を行うことが可能になった。"
- prussian_drillDESCR:0 "教練された兵士は、激しい訓練を受けていたため、戦闘状況で何をすべきかを正確に理解することができた。彼らはまた、敵と戦っている間、隊列を破られる可能性は低かった。一つの例がプロイセンの教練歩兵であった。彼らは当時、世界最高の訓練を受け、装備を与えられたの兵士の一つであった。彼らは非常に規律高く、ほぼすべての状況に対して十分に訓練された。アメリカ植民地がプロイセンの訓練教官に対し、イギリス人と戦うことができるように植民者への訓練を依頼していたほど、彼らの名声は優れていた。"
+ prussian_drillDESCR:0 "教練された兵士は、激しい訓練を受けていたため、戦闘状況で何をすべきかを正確に理解することができた。彼らはまた、敵と戦っている間、隊列を破られる可能性は低かった。一つの例がプロイセンの教練歩兵であった。彼らは当時、世界最高の訓練を受け、装備を与えられた兵士の一つであった。彼らは非常に規律高く、ほぼすべての状況に対して十分に訓練された。アメリカ植民地がプロイセンの訓練教官に対し、イギリス人と戦うことができるよう植民者への訓練を依頼したほど、彼らの名声は優れていた。"
  pueblo_ambushDESCR:0 "ロッキー山脈の丘陵地帯の荒廃した地形では、待ち伏せを中心として構築された新しい戦術が発展し始めた。これらのユニットは山岳歩兵の持久力を持っていなかったが、彼らの伏兵戦術で敵の士気を下げた。"
  qizilbash_cavalryDESCR:0 "イスラムシーア派の十二イマーム派への献身を示すため、赤と金の縞のある頭飾りで容易に識別された槍、剣、弓で武装した騎兵ユニットである。"
  reformed_asian_cavalryDESCR:0 "西洋化されたアジア騎兵はより多くの西洋戦術や戦略に適応する。"
