Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -2214,7 +2214,7 @@
  rebel_stronghold:0 "反逆の砦"
  desc_rebel_stronghold:0 "反乱軍は、この州を王権に対する抵抗のための強固な要塞としている。"
  great_britain_region:0 "グレートブリテン地方"
- new_model_army:0 "新型の軍隊"
+ new_model_army:0 "ニューモデル軍"
  desc_new_model_army:0 "武装勢力は、経験豊かな指揮官が率いる常設の専門軍に再編成された。"
  vasa_centralization_reforms:0 "集権化改革"
  desc_vasa_centralization_reforms:0 "改革と新たな税金により、地元住民に動揺が広がっている。"
