--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -678,7 +678,7 @@
  flavor_eng.EVTOPTA9111:0 "我々は海軍本部を認可しよう"
  flavor_eng.EVTOPTB9111:0 "代わりに英国陸軍を設立させよう"
  flavor_eng.EVTNAME9112:0 "英国陸軍"
- flavor_eng.EVTDESC9112:0 "我々がよく知っているイングランドは海軍国になることを決定し、その利点の一つとして海軍本部を設けた。イングランドの取り得る別の道のきざしもあり、それは大陸への道つまり陸軍国という道であった。その要素はクロムウェルの新型陸軍モデルの中に見受けられるが、もしイングランドがフランス領の一部を領有していたなら、親フランスのスチュアート王朝時代ができる可能性に疑問符が打たれる。もしそれが起こったならば、イングランドは外洋を守ることより大陸を守ることによる利益の方がはるかに大きかったであろう。"
+ flavor_eng.EVTDESC9112:0 "我々がよく知っているイングランドは海軍国になることを決定し、その利点の一つとして海軍本部を設けた。イングランドの取り得る別の道のきざしもあり、それは大陸への道つまり陸軍国という道であった。その要素はクロムウェルのニューモデル軍の中に見受けられるが、もしイングランドがフランス領の一部を領有していたなら、親フランスのスチュアート王朝時代ができる可能性に疑問符が打たれる。もしそれが起こったならば、イングランドは外洋を守ることより大陸を守ることによる利益の方がはるかに大きかったであろう。"
  flavor_eng.EVTOPTA9112:0 "英国陸軍を設立させよう"
  flavor_eng.EVTOPTB9112:0 "代わりに海軍本部を認可しよう"
  flavor_eng.EVTNAME9113:0 "ジェーン・グレイ"
@@ -861,11 +861,11 @@
  flavor_eng.EVTDESC9225:0 "イングランド内戦（1642-1648）は、ステュアート朝の君主と清教徒が率いる議会との間の長い権力闘争の結果であった。王室の司法手続強化（星室庁）と税金の要求（1635年、建艦費）は、議会の反対（1641年の不平の要約である大諫議書）と王室顧問の処刑に直面した。清教徒の指導者ジョン・ピムの逮捕とアルスターでのカトリックの反乱（1641）は国王派と議会派間の戦争を引き起こした。オリバー・クロムウェル（1599-1658）の断固とした改革とニューモデル軍は、王チャールズ1世（1649）の逮捕と処刑、護国卿（クロムウェル–1653）により支配された軍事独裁のイングランド共和国の設立および縮小された（ランプ）議会をもたらした。オランダ（1652-1654）とスペイン（1654-1659）に対する戦争が成功した後に、熱心な絶対主義者であるチャールズ・II・スチュアート（1660-1688）の利益となる、君主制がマンク将軍によって1658年に再興されるだろう。"
  flavor_eng.EVTOPTA9225:0 "議会派"
  flavor_eng.EVTOPTB9225:0 "国王派"
- flavor_eng.EVTNAME9226:0 "自禁令と新型の陸軍"
- flavor_eng.EVTDESC9226:0 "1645年に議会は、イングランド内戦の間に議員が陸軍または海軍に司令を執行する権利を剥奪する自禁令を可決することに合意した。武装した軍は、トーマス・フェアファクス卿の指揮の下、新型の陸軍に再編成された。 ネイズビーとラングポートの戦いで、新しい議会派の陸軍は国王派の主要な軍隊を撃ち破った。"
+ flavor_eng.EVTNAME9226:0 "自禁令とニューモデル軍"
+ flavor_eng.EVTDESC9226:0 "1645年に議会は、イングランド内戦の間に議員が陸軍または海軍に司令を執行する権利を剥奪する自禁令を可決することに合意した。武装した軍は、トーマス・フェアファクス卿の指揮の下、ニューモデル軍に再編成された。 ネイズビーとラングポートの戦いで、新しい議会派の陸軍は国王派の主要な軍隊を撃ち破った。"
  flavor_eng.EVTOPTA9226:0 "法令を可決し、軍を改革する。"
  flavor_eng.EVTOPTB9226:0 "それは必要ない。"
- flavor_eng.EVTNAME9227:0 "新型の陸軍"
+ flavor_eng.EVTNAME9227:0 "ニューモデル軍"
  flavor_eng.EVTDESC9227:0 "貴族たちに軍隊の指揮を与えることは、長い間行われてきた。これらの貴族の将校は、しばしば専門的な兵士ではなく、その質は様々であった。軍とその指導力を専任の専門家の力に改革する提案が行われている。その一部は、議員が軍隊や海軍を制御する権利を奪うための、法令の可決である。"
  flavor_eng.EVTOPTA9227:0 "法令を可決し、軍を改革する。"
  flavor_eng.EVTOPTB9227:0 "それは必要ない。"
@@ -894,7 +894,7 @@
  flavor_eng.EVTOPTA9233:0 "要求を受け入れる"
  flavor_eng.EVTOPTB9233:0 "彼らは反乱を起こせばいい。"
  flavor_eng.EVTNAME9234:0 "プライドの追放"
- flavor_eng.EVTDESC9234:0 "プライドの追放は1648年12月、第二次イングランド内戦の最中に行われた。トマス・プライド大佐の指揮下にある軍隊が、新型の陸軍とその指導者を支持しないすべての人々を議会から強制的に退去させた。"
+ flavor_eng.EVTDESC9234:0 "プライドの追放は1648年12月、第二次イングランド内戦の最中に行われた。トマス・プライド大佐の指揮下にある軍隊が、ニューモデル軍とその指導者を支持しないすべての人々を議会から強制的に退去させた。"
  flavor_eng.EVTOPTA9234:0 "忠実でない者を処刑する。"
  flavor_eng.EVTOPTB9234:0 "彼らを赦す。"
  flavor_eng.EVTNAME9235:0 "イングランド内戦の終結"
