--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -1907,7 +1907,7 @@
  CLAIM_DEFENDER_BTN2:0 "OK"
  CLAIM_DEFENDER_BTN3:0 "移動"
  CLAIM_DEFENDER_OTHER_TITLE:0 "信仰の擁護者を主張"
- CLAIM_DEFENDER_OTHER_SETUP:0 "誰かが自信は信仰の擁護者であると宣言した時"
+ CLAIM_DEFENDER_OTHER_SETUP:0 "誰かが自身を信仰の擁護者であると宣言した時"
  CLAIM_DEFENDER_OTHER_HEADER:0 "信仰の擁護者"
  CLAIM_DEFENDER_OTHER_1:0 "一国家の"
  CLAIM_DEFENDER_OTHER_2:0 "$COUNTRY$"
@@ -2046,7 +2046,7 @@
  WEDICTATORTOREPUBLIC_2:0 "我々は最終的に独裁官制を終わらせました。"
  WEDICTATORTOREPUBLIC_3:0 "そして我々の政治体制を適切な"
  WEDICTATORTOREPUBLIC_4:0 "§Y$GOVERNMENT$§!に戻しました。"
- WEDICTATORTOREPUBLIC_5:0 "共和国万歳!"
+ WEDICTATORTOREPUBLIC_5:0 "共和国万歳！"
  WEDICTATORTOREPUBLIC_LOG:0 "我が国の政治体制は$GOVERNMENT$に変更されました。"
  WEDICTATORTOREPUBLIC_BTN1:0 "OK"
  WEDICTATORTOREPUBLIC_BTN2:0 "OK"
