Save/Update files

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1138,7 +1138,7 @@
  flavor_rus.EVTDESC3410:0 "1543年、わずか14歳で、驚くべき力と勇気を持って、偉大な君主イヴァン4世はボヤールの恐怖の統治を終わらせた。彼の背後には、友人であるアレクセイ・アダシェフと、賢明なマカリイからモスクワ府主教を受継いだ、才能豊かなシリヴェーストルがいた。シリヴェーストルとアダシェフは選抜会議と呼ばれた顧問の集団に所属しており、イヴァン4世の治世の初期には、ロシアの改革の大きな助けとなったが、イヴァンの最初の妻アナスタシアが1560年に死亡したことを受けて、その支持を失った。1553年に重い病気の後、精神的に不安定になったイヴァンは、妻を毒殺したとして古い友人を非難して彼らを追放し、彼の残虐性を抑える者は誰もいなくなった。"
  flavor_rus.EVTOPTA3410:0 "優秀な大臣だ！"
  flavor_rus.EVTNAME3411:0 "モスクワ略奪"
- flavor_rus.EVTDESC3411:0 "イヴァンは、ヨーロッパとの交易がバルト海への自由な繋がりに依存していると感じ、彼は関心を西方へ向けることを決断した。1558年、彼はリヴォニアに対するロシア支配を確立しようと戦争に突入した。ロシアは緒戦に勝利し、リヴォニアの騎士たちを打ち破ることに成功したが、その同盟国であるリトアニアは1569年にポーランドの一部となった。戦争はスウェーデン（エストニアでの自らの利益を守るため）ロシアに対抗してポーランドを支持したことで長期化し、その間にクリミアのタタール人はアストラハンを攻撃し、さらに1571年には、ロシアの広い範囲に侵入し、モスクワを略奪し、クレムリンだけを残して焼き払った。"
+ flavor_rus.EVTDESC3411:0 "イヴァンは、ヨーロッパとの交易がバルト海への自由な繋がりに依存していると感じ、彼は関心を西方へ向けることを決断した。1558年、彼はリヴォニアに対するロシア支配を確立しようと戦争に突入した。ロシアは緒戦に勝利し、リヴォニアの騎士たちを打ち破ることに成功したが、その同盟国であるリトアニアは1569年にポーランドの一部となった。戦争はスウェーデンが（エストニアでの自らの利益を守るため）ロシアに対抗してポーランドを支持したことで長期化し、その間にクリミアのタタール人はアストラハンを攻撃し、さらに1571年には、ロシアの広い範囲に侵入し、モスクワを略奪し、クレムリンだけを残して焼き払った。"
  flavor_rus.EVTOPTA3411:0 "この恐ろしい侮辱のかたきを討つ。"
  flavor_rus.EVTOPTB3411:0 "反乱を鎮圧するのに利用する。"
  flavor_rus.EVTNAME3413:0 "大蔵省改革と給餌制度の廃止"
