--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1594,7 +1594,7 @@
  flavor_guj.12.d:0 "何百年も前、ペルシアのゾロアスター教の難民の集団がグジャラートに定住し、サンジャンのパールシー社会を設立した。時代を通して、この宗教的少数派は弾力的であることを示し、この活動的な地域の発展に積極的な役割を果たした。\n最近、パールシーの聖職者は、10世紀の彼らのペルシア出国から今日までの、パールシーの口述の歴史的伝統を記録している。結果として得られるキッセ・イ・サンジャンは確かに高級なペルシア詩の古典的な模範であるが、それは何よりも何世代にも渡ってパールシー自身が大切にする物語である。"
  flavor_guj.12.a:0 "OK"
  flavor_guj.13.t:0 "ミラト・イ・シカンドリ"
- flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たち我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・ イブン・ムハンマド・マンジューによるミラト・イ・シカンドリは、これの優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
+ flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たちが我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・ イブン・ムハンマド・マンジューによるミラト・イ・シカンドリは、この優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
  flavor_guj.13.a:0 "OK"
  CS_NAME_TAKEN:0 "§R称号を獲得！§!"
  enforced_reservatum_ecclesiasticum:0 "聖職者に関する留保の原則を強制"
@@ -1617,7 +1617,7 @@
  unaided_during_blockade:0 "支援のない封鎖"
  desc_unaided_during_blockade:0 "市が封鎖されていた間の国家からの支援の欠如は、人々の間に支配者への疑いの心を呼び起こした。"
  scottish_mercenaries:0 "スコットランド人傭兵"
- desc_scottish_mercenaries:0 "多くのスコットランド人は我々の軍隊で幸運の兵士として働き、軍隊への潜在的な依存を高めている。"
+ desc_scottish_mercenaries:0 "多くのスコットランド人は我々の軍隊で傭兵として働き、軍隊への潜在的な依存を高めている。"
  huguenot_stronghold:0 "ユグノーの強化"
  desc_huguenot_stronghold:0 "宗教的反体制派がここに避難し、防衛や反乱の準備を強化し始めている。"
  jesuit_ruler:0 "イエズス会の支配者"
