Save/Update files

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -925,7 +925,7 @@
  flavor_eng.9880.a:0 "素晴らしい。"
  flavor_eng.9880.a.tooltip:0 "10年間は、異なる§Yシンポジウム§!が行われます。"
  flavor_swe.1974.t:0 "スウェーデンの都市！"
- flavor_swe.1974.d:0 "しかしながら、転機は、ヨハン王のフランス承継ではなく、ストックホルムの陰鬱な冬の夜よりも17世紀のパリの温かい国際的な雰囲気を好んだ、彼のパレ・ロワイヤルへの移転でもなかった。転機は1651年のパリの大火とともに翌月に訪れることになるだろう。火災は現在の第六区で発生し、パレ・ロワイヤル、市庁舎およびノートルダム大聖堂などはセーヌ川によって火から隔離され危機を脱すると思われたが、川の南は深刻な危機にあることがすぐに明らかになった。スウェーデン語を話す管理者とフランス語を話す消防士の部下との間の混乱により、対応の努力はばらばらとなり、混沌としたままだった。事態は悪化し、泣き叫ぶ避難民は無秩序な暴徒を形成した。新たにホームレスとなった暴徒化した群衆が、シャンゼリゼ大通りを略奪しながら、現在の第8区を襲撃した。スウェーデン兵士だけが、重要な第4区とパレ・ロワイヤルが同じ運命となることを防いだ。灰塵が収まると、フランスのパリの大部分は消滅してしまっていた。ヨハン王は、彼の新たな都市の廃墟と化した残骸の中で一つの機会を得た。彼は避難民のために、公的助成による定住地を設けたが、それはサン・ジェルマンに設置された。イル・ド・フランスの中心部が小さくなり、フランス人ホームレスがパリから出ていったので、ヨハンはセーヌ川の南部をスカンジナビア様式で再建するために、当時、最も偉大な建築家であったモーリス・ド・ブロワを雇った。スウェーデンの貴族たちが反乱するかもしれないことを懸念していたヨハンは、創造的な解決策を思いついたのだった。彼はスウェーデンとフィンランドの貴族をパリ南部に移住させ、パレ・ロワイヤル近くにいるようにしていたので、ヨハンは彼らを監視することができたのである。"
+ flavor_swe.1974.d:0 "しかしながら、転機は、ヨハン王のフランス承継ではなく、ストックホルムの陰鬱な冬の夜よりも17世紀のパリの温かい国際的な雰囲気を好んだ、彼のパレ・ロワイヤルへの移転でもなかった。転機は1651年のパリの大火とともに翌月に訪れることになるだろう。火災は現在の第六区で発生し、パレ・ロワイヤル、市庁舎およびノートルダム大聖堂などはセーヌ川によって火から隔離され危機を脱すると思われたが、川の南は深刻な危機にあることがすぐに明らかになった。スウェーデン語を話す管理者とフランス語を話す消防士の部下との間の混乱により、対応の努力はばらばらとなり、混沌としたままだった。事態は悪化し、泣き叫ぶ避難民は無秩序な暴徒を形成した。新たにホームレスとなった暴徒化した群衆が、シャンゼリゼ大通りを略奪しながら、現在の第8区を襲撃した。スウェーデン兵士だけが、重要な第4区とパレ・ロワイヤルが同じ運命となることを防いだ。灰塵が収まると、フランスのパリの大部分は消滅してしまっていた。ヨハン王は、彼の新たな都市の廃墟と化した残骸の中で一つの機会を得た。彼は避難民のために、公的助成による定住地を設けたが、それはサン・ジェルマンに設置された。イル・ド・フランスの中心部が小さくなり、フランス人ホームレスがパリから出ていったので、ヨハンはセーヌ川の南部をスカンジナビア様式で再建するために、当時、最も偉大な建築家であったモーリス・ド・ブロワを雇った。スウェーデンの貴族たちの反乱を懸念していたヨハンは、創造的な解決策を思いついたのだった。彼はスウェーデンとフィンランドの貴族をパリ南部に移住させ、パレ・ロワイヤル近くにいるようにしていたので、ヨハンは彼らを監視することができたのである。"
  flavor_swe.1974.a:0 "ひどいものではない…"
  flavor_swe.EVTNAME5030:0 "エリク・ダールベリ"
  flavor_swe.EVTDESC5030:0 "1679年、熟練した軍人であり軍事技術者でもあったエリク・ダールベリがスウェーデンの要塞局長に任命された。当時、スウェーデンは権力の頂点にあり、過去数十年の攻撃政策により国境はかつてないほど広がっていた。エリク・ダールベリと彼の仲間たちは、いくつかの堅固な要塞を設計し、地形を最大限有効に活用して帝国周辺の重要な地点に建設した。ヨーテボリの偉大な砦レイヨネットとクローナル、ヴァールベリとダラレーの要塞はすべて天才の証である。残念なことに、緊縮した予算により、東部の州には建設が許されなかった。これは、今後、数年間に悲惨な結果を招くだろう…"
@@ -2570,7 +2570,7 @@
  flavor_pol.EVTOPTA1:0 "大海軍を構築する。"
  flavor_pol.EVTOPTB1:0 "計画を放棄する。"
  flavor_pol.EVTNAME2:0 "ジグムントの柱"
- flavor_pol.EVTDESC2:0 "ジグムント3世ヴァーサの息子であり後継者であるヴワディスワフ4世ヴァーサは、ジグムント3世の柱の建設を命じ、それは1643年から1644年の間に建てられた。イタリア生まれの建築家コンスタンティーノ・ ティンカーラがこの柱をデザインした。ワルシャワにある高さ8.5ｍの赤い大理石で作られたこのコリント式の石柱の上には、高さ2.75ｍのジグムント3世ヴァーサが置かれている。柱は4匹の鷹で装飾され、王は鎧を着て片手に十字架を持ち、もう片方の手には剣を持っている。"
+ flavor_pol.EVTDESC2:0 "ジグムント3世ヴァーサの息子であり後継者であるヴワディスワフ4世ヴァーサは、ジグムント3世の柱の建設を命じ、それは1643年から1644年の間に建てられた。イタリア生まれの建築家コンスタンティーノ・ ティンカーラがこの柱をデザインした。ワルシャワにある高さ8.5ｍの赤い大理石で作られたこのコリント式の石柱の上には、高さ2.75ｍのジグムント3世ヴァーサが置かれている。柱は4匹の鷹で装飾され、王は鎧を着て片手に十字架を、もう片方の手には剣を持っている。"
  flavor_pol.EVTOPTA2:0 "ジグムントの柱を建設する。"
  flavor_pol.EVTOPTB2:0 "ジグムント3世を記念する必要などない！"
  flavor_pol.EVTNAME3:0 "メルクリウス・ポルスキ・オルデュナリーナ"
