--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1563,7 +1563,7 @@
  wet_rice_cultivation:0 "水稲栽培"
  wet_rice_cultivation_desc:0 "我らタイ族の祖先が最初にアッサムに着いた時、我々が利用できる土地は、経境地で湿地帯であった。彼らはすぐにこれらの土地がこの上なく生産に向いていない土地だと気づいた。我が故郷の水稲栽培技術を活用することで、他が気にかける程痩せた地域で繁栄することができた。我々はもはや上アッサムの辺境地に制限されてはいないが、稲作は依然として我が経済の根幹である。"
  river_warfare:0 "河川戦術"
- river_warfare_desc:0 "アッサム地方、特にブラマプトラ川は外国の侵略者に対する我々の最大の味方である。ブラマプトラ川に沿って前身しようとするどんな外国軍も夏の雨に耐えねばならず、川に沿う供給ラインから切り落とされないよう最新の注意を払わねばならない。ゲリラ戦術を用意し、侵略者の供給ラインを攻撃し軍用品へ襲撃することにより、損害を与える飢餓と伝染病により非常に敵対的な領土中で敵の恐れが中止されることができる。"
+ river_warfare_desc:0 "アッサム地方、特にブラマプトラ川は外国の侵略者に対する我々の最大の味方である。ブラマプトラ川に沿って前進しようとするあらゆる外国軍は夏の雨に耐えねばならず、川に沿う供給ラインから切り落とされないよう最新の注意を払わねばならない。ゲリラ戦術を用意し、侵略者の供給ラインを攻撃し軍用品を襲撃することで、非常に敵対的な土地において、飢餓や伝染病による損失により敵のリスクを遮断することができる。"
  reform_paik_system:0 "パイク制の改革"
  reform_paik_system_desc:0 "我が民族が13世紀にここへたどり着いて以来、東南アジアのルーツにより呼び起こされた賦役制を利用した。パイクは防衛、土木、軍需生産のために用いられ、我が王国に不可欠な部分である。しかし、我が国が成長するにつれて、この制度は再編を必要としている。全てのパイク義務、つまりパイクの割当てと制度における役人に対する新しく明確で段階的な制度の綿密な見直しは、どんな外国の脅威に対しても大きな助けとなる強力な制度を創り出すであろう。"
  process_of_appeal:0 "請願法"
