Save/Update files

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -811,7 +811,7 @@
  war_of_the_roses.11.d:0 "反乱軍は現在、[Root.GetName]を完全に支配しており、ヨーク家に忠実な支持者のための拠点となっている。"
  war_of_the_roses.11.a:0 "これは深刻な脅威だ。"
  war_of_the_roses.12.t:0 "ランカスター家の支援"
- war_of_the_roses.12.d:0 "イングランドにおいて薔薇戦争として知られる紛争である、王位の継承をめぐる内戦が激化している。反乱を起こしたランカスター家は、外国からの援助を求めており、軍隊を要請するため我々に使節を送ってきた。彼らが王位を請求することに成功すれば、我々の助力は確実に記憶され、イングランドと[Root.GetName]との関係が高まるだろう。"
+ war_of_the_roses.12.d:0 "イングランドにおいて薔薇戦争として知られる紛争である、王位の継承をめぐる内戦が激化している。反乱を起こしたランカスター家は外国からの支援を求めており、援軍を求める使節を我々に送ってきた。彼らが王位を請求することに成功すれば、我々の助力は確実に記憶され、イングランドと[Root.GetName]との関係が高まるだろう。"
  war_of_the_roses.12.a:0 "彼らに形ばかりの軍隊を送る。"
  war_of_the_roses.12.b:0 "彼らに金を送る。"
  war_of_the_roses.12.c:0 "反乱軍を支援しない"
@@ -1198,7 +1198,7 @@
  flavor_rus.EVTOPTA3430:0 "クールラントを手に入れる準備だ。"
  flavor_rus.EVTOPTB3430:0 "些細な問題は無視する。"
  flavor_rus.EVTNAME3432:0 "ドゥーマと立法改革"
- flavor_rus.EVTDESC3432:0 "1767年、は、エカチェリーナ国民の真実の願いを確かめ、憲法を制定する目的で、すべての州の代表者とすべての社会階級（奴隷を除く）から成る委員会を招集した。議論は何ヶ月も続いたが、何も得られなかった。委員会へのエカチェリーナの指示は、憲法と法律の草案であった。それはフランスでの発表には余りにも自由主義的であると考えられ、ロシアでは死んだ文書のままであった。"
+ flavor_rus.EVTDESC3432:0 "1767年、エカチェリーナは国民の真の願いを確かめ、憲法を制定する目的で、すべての州の代表者とすべての社会階級（奴隷を除く）から成る委員会を招集した。議論は何ヶ月も続いたが、何も得られなかった。委員会へのエカチェリーナの指示は、憲法と法律の草案であった。それはフランスでの発表には余りにも自由主義的であると考えられ、ロシアでは死んだ文書のままであった。"
  flavor_rus.EVTOPTA3432:0 "社会の不公平を無視する。"
  flavor_rus.EVTOPTB3432:0 "社会の不公平について何かを行う。"
  flavor_rus.EVTNAME3434:0 "重商主義改革"
@@ -2126,7 +2126,7 @@
  flavor_dan.EVTOPTA3298:0 "海軍改革"
  flavor_dan.EVTOPTB3298:0 "陸軍改革"
  flavor_dan.EVTNAME3299:0 "ペーダー・グリッフェンフィルド"
- flavor_dan.EVTDESC3299:0 "ペーダー・グリッフェンフィルドはおそらくデンマーク王が今までに雇った中で最も素晴らしい顧問だった。ペーダーはコペンハーゲンの富裕層であるシューマッハ家に生まれた。1654-62年の間、海外を旅し勉強した後、彼は王室図書館員として国務省に入るため帰国した。直ちに彼は、絶対主義者のフレデリック3世の信任を得て王室の秘書になった。そこで彼は、絶対主義の正当化するための1665年コネルベルン（「国王法」）を起草した。王が亡くなった1670年、シューマッハはグリッフェンフィルド伯爵となった。1674年まで、彼はクリスチャン5世の下でデンマークの大法官を勤め上げた。"
+ flavor_dan.EVTDESC3299:0 "ペーダー・グリッフェンフィルドはおそらくデンマーク王が今までに雇った中で最も素晴らしい顧問だった。ペーダーはコペンハーゲンの富裕層であるシューマッハ家に生まれた。1654-62年の間、海外を旅し勉強した後、彼は王室図書館員として国務省に入るため帰国した。直ちに彼は、絶対主義者のフレデリック3世の信任を得て王室の秘書になった。そこで彼は、絶対主義を正当化するための1665年コネルベルン（「国王法」）を起草した。王が亡くなった1670年、シューマッハはグリッフェンフィルド伯爵となった。1674年まで、彼はクリスチャン5世の下でデンマークの大法官を勤め上げた。"
  flavor_dan.EVTNAME3300:0 "大北方戦争"
  flavor_dan.EVTDESC3300:0 "1697年、15歳のカール12世はスウェーデン王位に昇格した。その機会を捉えて、ロシア皇帝ピョートル1世は1699年にデンマークとポーランド、ザクセンと同盟を結んだ。しかし、イギリスとオランダの海軍援助により、カール12世はシェラン島に上陸し、すぐにデンマークを破り、その後エストニアに移動し、彼のひどく数に勝るスウェーデン（1〜5）は、ロシアに対して圧倒的な勝利を収めた。ロシアとの戦いを終える代わりに、カールはポーランド・ザクセンに移動して、アウグスト2世を攻撃し、1704年にポーランドから追放し（親スウェーデンのスタニスワフ・レシチニスキが国王に選ばれた）、1706年にはザクセンを従属させた。ロシアはサンクトペテルブルク（1703年）の建設を開始し、軍隊を再建したが、同時にエストニアの一部も奪取した（1704〜1706年）。カールはその後、マゼーパの下でコサックが再び反乱（1708年）を起こしたウクライナを経てモスクワに行軍することを決断した。厳しい冬とロシアの襲撃によって彼の軍隊は失われ、1709年にポルタヴァの戦いで撃破された。負傷した王はオスマン帝国へと逃れた。ロシアはプルト川でオスマン帝国に包囲されたが、ピョートルはアゾフと引き換えに賄賂を通じて安全を得ることに成功した。カールがまだトルコで追放されている間に、ロシア、デンマーク、ハノーファー、さらにはプロイセン軍もバルト海周辺のスウェーデンの土地のほとんどを占領した。トルコの収容所から出たカールは、1718年にフレデリックスハルドのノルウェーの要塞の前で戦死した。続く和平条約では、スウェーデンはバルト帝国の大半を失った。"
  flavor_dan.EVTOPTA3300:0 "スコーネを取り戻す。"
