--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -5432,7 +5432,7 @@
  caspian_silk:0 "カスピ海の絹"
  caspian_silk_desc:0 "カスピ海の海岸線は森林、湿地、水田の土地であるが、その大部分は蚕と桑の大規模農場の土地である。独自の種類の桑の木の中心地として、またイランで蚕を栽培する最初の地域として、今や約1千年前に遡る絹生産の伝統がある。我々の都市で生産された絹は、イランとホラーサーンだけでなく、イタリア、フランス、ドイツの都市でもよく知られており、彼らは皆、この珍しい商品の多くを彼らが手に入れられるよう輸入しようとしている。その商人が我々から購入する唯一の限度は、我々がどれくらい生産できるかということだ。しかしながら、絹の生産事業をより効率的にする方法は存在する。我々の織工が世界の流行を作り上げている間に、我々は豊かに成長できるよう、絹の生産を拡大しよう。"
  caspian_sea_trade:0 "カスピ海交易の保護"
- caspian_sea_trade_desc:0 "敵対的な船の数が増えたことで、カスピ海での海外交易が危険にさらされている。外国人であろうと海賊であろうと、他国が我が国の生命線である交易を奪うことは絶対に許されない。完全海軍はカスピ海では不可能かもしれないが、たとえそれが、遠く離れた国家からの造船工をもたらすことを意味していようとも、我々は偉大な内海を巡回する船をあらゆる手を尽くして建設する準備をしなければならない。"
+ caspian_sea_trade_desc:0 "敵対的な船の数が増えたことで、カスピ海での海外交易が危険にさらされている。外国人であろうと海賊であろうと、他国が我が国の生命線である交易を奪うことは絶対に許されない。完全な海軍はカスピ海では不可能かもしれないが、たとえそれが、遠く離れた国家からの造船工をもたらすことを意味していようとも、我々は偉大な内海を巡回する船をあらゆる手を尽くして建設する準備をしなければならない。"
  caspian_unite_minor_states:0 "タバリスタン国家の統一"
  caspian_unite_minor_states_desc:0 "この地域を彼らの故郷としてきた多くの国家が存在し、国境の中にさえ、高度の自治を与えられた古代王朝の地方の支配者が多くいる。我々はこれが長く続くことを許すことはできず、地方の君主が如き城を減らし、その土地の統治者に信頼できる人物を置かなければならない。"
  caspian_safe_haven:0 "安全な避難所"
