--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -300,7 +300,7 @@
  veche_of_pskov:0 "プスコフの民会"
  veche_of_pskov_desc:0 "プスコフの民会、あるいは最高評議会は、プスコフの王子さえも凌ぐ、プスコフで最も強力な政治組織であった。ポサードニクとsotskiys、国内のすべての内政関係を統制する官僚たちの選出を委託されていた。"
  legacy_of_daumantas:0 "ダウマンタスの遺産"
- legacy_of_daumantas_desc:0 "もともとリトアニア公爵であったダウマンタスは、プスコフの軍勢を率いての戦いの後、彼を君主として選出することについてプスコフの人々を納得させることに成功した。正教会の洗礼を受けた彼はティモセウスと名乗り、後に、リトアニアとリヴィオン騎士団に対する軍勢を率いて成功し、プスコフの伝説的英雄となった。"
+ legacy_of_daumantas_desc:0 "もともとリトアニア公爵であったダウマンタスは、プスコフの軍勢を率いての戦いの後、彼を君主として選出することについてプスコフの人々を納得させることに成功した。正教会の洗礼を受けた彼はティモセウスと名乗り、後に、リトアニアとリヴォニア騎士団に対する軍勢を率いて成功し、プスコフの伝説的英雄となった。"
  balt_mercenaries:0 "バルト系傭兵"
  balt_mercenaries_desc:0 "ロシア王国の西の端にあるプスコフは、常に様々なバルト系の部族たちとの接触があった。少し粗野ではあるものの、それらの戦士たちは適正な対価で、常に多くと戦うことを熱望していた。"
  pskov_charter:0 "プスコフ憲章"
