Save/Update files

--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -228,7 +228,7 @@
  PROV4663:1 "フルハ"
  PROV_ADJ4663:1 "フルハ"
  furdan_area:0 "フルダン"
- sakhalin_area:0 "樺太"
+ sakhalin_area:0 "サハリン"
  evenk:0 "エヴェンキ"
  SOL:0 "ソロン"
  SOL_ADJ:0 "ソロン"
