--- a/source/localisation/random_new_world_l_english.yml
+++ b/source/localisation/random_new_world_l_english.yml
@@ -469,14 +469,14 @@
  rnw_kalina_adj:0 "カリーナ"
  rnw_lipa:0 "リパ"
  rnw_lipa_adj:0 "リパ"
- rnw_nanticoke:0 "ナンシートーク"
- rnw_nanticoke_adj:0 "ナンシートーク"
+ rnw_nanticoke:0 "ナンティコーク"
+ rnw_nanticoke_adj:0 "ナンティコーク"
  rnw_nauset:0 "ノーセット"
  rnw_nauset_adj:0 "ノーセット"
  rnw_gigra:0 "ギグラ"
  rnw_gigra_adj:0 "ギグラ"
- rnw_loup:0 "ルーペ"
- rnw_loup_adj:0 "ルーペ"
+ rnw_loup:0 "ループ"
+ rnw_loup_adj:0 "ループ"
  rnw_uchi:0 "ウチ"
  rnw_uchi_adj:0 "ウチ"
  rnw_yuki:0 "ユキ"
