Save/Update files

--- a/source/localisation/loadingtips_l_english.yml
+++ b/source/localisation/loadingtips_l_english.yml
@@ -53,7 +53,7 @@
  LOADING_TIP_51:0 "傭兵は人的資源の節約に役立ちます。雇い入れる余裕があるならばですが。"
  LOADING_TIP_52:0 "州の自治率を上げると不穏度は下がりますが、税収も下がります。"
  LOADING_TIP_53:0 "ライバルを選ぶと、相手国との関係が悪化します。しかし、戦いにおいてより多くの威信を稼ぎ、より多くの土地を請求できます。"
- LOADING_TIP_54:0 "重要な交易ノードを持つ州を制御することは世界的な交易帝国を達成するために不可欠です。"
+ LOADING_TIP_54:0 "重要な交易ノード内の州を支配することは世界的な交易帝国となるために不可欠です。"
  LOADING_TIP_55:0 "包囲網は強大な敵に対抗する非常に強力なツールです。"
  LOADING_TIP_56:0 "事を急がず、宣戦布告の前に敵の友人とその敵を知っているか確認しましょう。彼らはあなたが目標を達成するのに役立ちます。"
  LOADING_TIP_57:0 "陸海軍・顧問は時間が経つにつれ、より高価になります。\n経済成長がそれらを支え続けられるか確認しましょう。"
@@ -70,12 +70,12 @@
  LOADING_TIP_68:0 "選帝侯が7人に満たない場合、神聖ローマ皇帝は新たな選帝侯を任命できます。"
  LOADING_TIP_69:0 "城壁が破壊されていなければ突撃はできません。"
  LOADING_TIP_70:0 "内陸部の海で戦う時、ガレー船は優秀です。\n例えばバルト海、地中海、そして黒海で。"
- LOADING_TIP_71:1 "消耗を抑制！\n高い能力を持つリーダーは、ユニットの消耗を軽減します。"
- LOADING_TIP_72:0 "F10キーを押すと、現在選択しているマップモードでスクリーンショットを保存します。"
+ LOADING_TIP_71:1 "消耗で兵が死にます！\n高い能力を持つリーダーは、ユニットの消耗を軽減します。"
+ LOADING_TIP_72:0 "F10キーを押すと、現在選択しているマップモードでスクリーンショットが保存されます。"
  LOADING_TIP_73:0 "海軍維持費を減らすと船の交易力を減少させます。小型船を多く持っている場合、維持費を下げることで収入を失うでしょう。"
  LOADING_TIP_74:0 "戦争疲弊は、平和時にゆっくりと消えていき、戦争時には全く消えません。"
- LOADING_TIP_75:0 "包囲網に目を光らせておきましょう。あなたが多くの隣国との戦争で失敗することはとても危険です。"
- LOADING_TIP_76:0 "あなたは隣接する州だけでなく、あなたの中核州と海域を共有している全ての州に請求権を捏造することができます。"
+ LOADING_TIP_75:0 "包囲網に目を光らせておきましょう。近隣諸国の大多数と戦争するはめになるのは危険です。"
+ LOADING_TIP_76:0 "隣接する州だけでなく、中核州と海域を共有している全ての州にも請求権を捏造することができます。"
  LOADING_TIP_77:0 "多くの一般的な行動にはホットキーが割り当てられています。\nそれらはツールチップで確認できるでしょう。"
  LOADING_TIP_78:0 "選択したユニットをグループに割り当てるためにCtrl+数字キーを、問題のユニットをすぐ選択するために数字キーを押しましょう。"
  LOADING_TIP_79:0 "人的資源の回復はゆっくりです。人的資源を節約するために傭兵部隊を加えることを考えてみましょう。"
