--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3444,7 +3444,7 @@
  EVTOPTA9489:0 "思い出は生き続けるだろう。"
  EVTOPTB9489:0 "我々の悲しみは我々の正当性を証明している。"
  EVTNAME9490:0 "真のあなたを見て"
- EVTDESC9490:0 "彼女は振り返る。彼女はあなたを見る。「あなたは最近、祈りましたか？$MONARCH$？」この質問は、過去に成長してきた、あなたたちの間の距離を示している。「私はあなたがすべきだと思う。私はやっているわ。ほとんど毎晩」あなたは笑う。まだあなたの妻である彼女の、すべての人間的な欠点に対して。彼女がさらに近づくと、彼女の顔の向こうにかすかな笑みが広がっていくのがわかる。「おまえは$MONARCH$を見て、何を笑っているんだ？」"
+ EVTDESC9490:0 "彼女は振り返り、あなたを見つめてこう問いかけます。「ねえ、我が$MONARCH$、あなた、最近お祈りはしているのかしら？」この問いかけは、この何年もの間にドンドンと広がった二人の距離間を表した言葉でした。「私はあなたがお祈りをすべきだと思うわ。私はしているわよ、ほぼ毎晩ね。」あなたは笑っています。彼女は人として欠陥があるのですが、まだあなたの妻なのです。彼女がさらに近づいてきました。その顔にかすかな笑みが広がっていくのが見てとれます。「ねえ、我が$MONARCH$。そんなに笑って、あなた一体何がおかしいの？」"
  EVTOPTA9490:0 "お前が何を言おうとしてるか今わかったぞ。"
  EVTOPTB9490:0 "経済はもう笑えるほど順調だよ！ハハッ！"
  EVTNAME3097:0 "反乱軍が蜂起！"
