Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -2867,7 +2867,7 @@
  the_fuggers:0 "フッガー家"
  desc_the_fuggers:0 "我が国の財政は強力なフッガー家とその巨大な金融帝国によって運営されている。"
  concessions_to_the_peasantry:0 "農民への譲歩"
- desc_concessions_to_the_peasantry:0 "「コムネーロス」たちをなだめるために、大幅な譲歩が農民に与えられている"
+ desc_concessions_to_the_peasantry:0 "「コムネーロス」たちをなだめるために、大幅な譲歩が農民に与えられている。"
  foreign_ruler:0 "外国からの支配者"
  desc_foreign_ruler:0 "この州の人々は、彼らの新しい支配者の正統性をまだ確信できていない。"
  colonial_governors:0 "植民地総督"
