--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -695,7 +695,7 @@
  CONFIRM_CANCEL_SETTLEMENT_GROWTH_DESC:0 "本当に$PROV|Y$における移民成長の促進を停止しますか？"
  LOCKED_REFORM:0 "これは特別な政府改革です。このレベルの他の改革に変更することはできません。"
  investment_events.1.t:0 "セポイ"
- investment_events.1.d:0 "[sepoy_province.TradeCompany.GetName]は、軍事経験のある頑強な男を常に雇っている。しかしながら、[Root.Capital.GetName]から募兵する兵站は達成が難しいかもしれない。交易会社の将校は、交易会社の兵を支援するためのより費用対効果の高い方法は、現地インドの民衆からより広く雇用することだろうと提案しています。これら「セポイ」連隊は、主にバラモンやラージプートのクシャトリヤといった、インド社会の上位カーストから徴用されたもので、従って、戦争の方法によく精通している。最近のインドでは見かけることが難しい誠実で公正な支払いをすると評判なため、多くのセポイは喜んで交易会社に仕えている。\n\n[Root.GetAdjective]兵のより均一化された軍隊を命令するのはより容易かもしれないが、亜大陸で利用できる膨大な人的資源を無視すべきではない。"
+ investment_events.1.d:0 "[sepoy_province.TradeCompany.GetName]は、軍事経験のある頑強な男を常に雇っている。しかしながら、[Root.Capital.GetName]から募兵する兵站は達成が難しいかもしれない。交易会社の将校は、交易会社の兵を支援するためのより費用対効果の高い方法は、現地インドの民衆からより広く雇用することだろうと提案している。これら「セポイ」連隊は、主にバラモンやラージプートのクシャトリヤといった、インド社会の上位カーストから徴用されたもので、従って、戦争の方法によく精通している。最近のインドでは見かけることが難しい誠実で公正な支払いをすると評判なため、多くのセポイは喜んで交易会社に仕えている。\n\n[Root.GetAdjective]兵のより均一化された軍隊を命令するのはより容易かもしれないが、亜大陸で利用できる膨大な人的資源を無視すべきではない。"
  investment_events.1.a:0 "新たなセポイ連隊の設立する。"
  investment_events.1.b:0 "原住民を雇用する必要はない"
  investment_events.2.t:0 "交易会社購入に関する相違"
