Save/Update files

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -565,7 +565,7 @@
  religious_leagues.3.d:0 "帝国における宗教戦争は、カトリック連盟の勝利に終わった。皇帝は退位を余儀なくされ、今やカトリックが帝国の支配的な信仰となっている。"
  religious_leagues.3.a:0 "暗黒の日だ！"
  religious_leagues.4.t:0 "ヴェストファーレン条約"
- religious_leagues.4.d:0 "帝国内における宗教戦争はうやむやになったまま終わり、双方の陣営はヴェストファーレンのミュンスターにて妥協的和平を結んだ。ヴェストファーレン条約に基づけば、各州が信仰する宗派は「その領土の支配者は誰か、そして支配者はどの宗派を信仰しているか」によって決まるべきだという。"
+ religious_leagues.4.d:0 "帝国内における宗教戦争はうやむやのまま終わり、双方の陣営はヴェストファーレンのミュンスターにて妥協的和平を結んだ。ヴェストファーレン条約に基づけば、各州が信仰する宗派は「その領土の支配者は誰か、そして支配者がどの宗派を信仰しているか」によって決まるべきだという。"
  religious_leagues.4.a:0 "領土に属す者、宗教も属す"
  religious_leagues.5.t:0 "福音同盟"
  religious_leagues.5.d:0 "皇帝$MONARCH$が帝国議会でプロテスタントの信仰告白を拒否した後、帝国のプロテスタント諸侯は共同軍と資産を持つ、シュマルカルデン連盟を結成し、海外との結びつきを求めた。この新しい同盟による脅威を感じたドイツのカトリック国家は、カトリック連盟へと再編されている。帝国の宗教紛争の舞台が設定されつつある。"
