--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4673,7 +4673,7 @@
  flavor_rus.EVTDESC2000:0 "革命！専制支配体制は倒され、ツァーリはペトロ聖堂にて首をはねられた。新しいロシアを、革命的なロシアを作るときだ！\n\n新しい体制の指導者は、以前抑圧に立ち向かい、ツァーリへの反乱を率いた帝国陸軍の将校のグループである秘密組織、救済同盟によって構成される。パーヴェル・ペステリは同盟の思想の中核をなし、ミハイル・ルニンとニキータ・ムラヴィヨフは最前線で率いていた。同盟の名目上の指導者であるセルゲイ・トルベツコイは健康不良のため、最近ロシアに戻ったばかりだ。それぞれは、新たなロシア国家の統率を目指して努力している。\n\nこの革命政府は農奴制を廃止すること、法の下の平等を確立すること、そして国家と小作農との間で抑圧的な貴族の土地を再分配することを目指している。政治的自由主義の強力な基盤により、この革命は世界中の専制政治に対し挑戦するというゆるぎない決意をおし進めている。"
  flavor_rus.EVTOPTA2000:0 "救済同盟は革命を導くだろう！"
  flavor_rus.EVTNAME2001:0 "第三のローマ"
- flavor_rus.EVTDESC2001:0 "まさに今もたらされた英雄的勝利を祝い、我々の兵士たちは、新たに洗礼を受けた旧コンスタンティノープルであるツァリグラードの都市を行進します。この新たな征服により、世界中の目から[Root.GetName]は真の第三のローマとして見えています！\n\n後は、我々の生まれ変わった国家の首都を決めるだけです。大都市[Root.Capital.GetName]のままでしょうか、それとも宮廷をツァリグラードに遷都しましょうか？"
+ flavor_rus.EVTDESC2001:0 "まさに今もたらされた英雄的勝利を祝い、我々の兵士たちが、新たに洗礼を受けた旧コンスタンティノープルことツァリグラードの市街を行進している。この新たな征服により、世界中の目から[Root.GetName]は真の第三のローマとして見られている！\n\n後は、我々の生まれ変わった国家の首都を決めるだけだ。大都市[Root.Capital.GetName]のままだろうか、それとも宮廷をツァリグラードに移すべきだろうか？"
  flavor_rus.EVTOPTA2001:0 "ツァリグラードは我々の首都であるべきだ！"
  flavor_rus.EVTOPTB2001:0 "[Root.Capital.GetName]はより一層の栄光を生み出している"
  flavor_rus.EVTNAME2002:0 "キエフの回復"
