Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -2392,10 +2392,10 @@
  SORT_BY_MORALE:0 "軍の士気で並べ替え"
  SORT_BY_LOCATION:0 "軍の場所で並べ替え"
  SORT_BY_TYPE:0 "ユニットの種類で並べ替え"
- SORT_BY_LEADER:0 "ユニットの指揮官の有無で並べ替え"
- SORT_BY_STATUS:0 "ユニットの有効性で並べ替え。"
- SORT_BY_INFAMY:0 "汚名で並べ替え。"
- SORT_BY_DIP_COST:0 "外交力コストで並べ替え"
+ SORT_BY_LEADER:0 "ユニットの指揮官の有無で並べ替えます。"
+ SORT_BY_STATUS:0 "ユニットの有効性で並べ替えます。"
+ SORT_BY_INFAMY:0 "汚名で並べ替えます。"
+ SORT_BY_DIP_COST:0 "外交力コストで並べ替えます。"
  SORT_BY_COST:1 "§Yコスト§!"
  SORT_BY_NCARDINALS:0 "有効な枢機卿の数で並べ替え"
  SORT_BY_LOYALTY:0 "国で並べ替え"
@@ -3903,8 +3903,8 @@
  colonial_australia:0 "オーストラリア植民地"
  COLONIAL_REGION_New_Root_GetName:0 "ニュー[Root.GetName]"
  COLONIAL_REGION_New_Root_GetName_ADJ:0 "ニュー[Root.GetAdjective]"
- COLONIAL_ALASKA_Alyeska:0 "アリエスカ"
- COLONIAL_ALASKA_Alyeska_ADJ:0 "アリエスカ"
+ COLONIAL_ALASKA_Alyeska:0 "アリャースカ"
+ COLONIAL_ALASKA_Alyeska_ADJ:0 "アリャースカ"
  COLONIAL_ALASKA_Pacifico_Norte:0 "パシフィコ・ノルテ"
  COLONIAL_ALASKA_Pacifico_Norte_ADJ:0 "パシフィコ・ノルテ"
  COLONIAL_ALASKA_Alaska:0 "アラスカ"
