--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -2857,8 +2857,8 @@
  economic_revival_desc:0 "ウェールズは経済的な力となるためにいくつかの問題を抱えていた。それは周辺的な立地、主として標高の高い地勢、貧しい人々の交流、まばらな人口により制約されていた。交易や港湾の開発、鉱山における豊富な鉱床の掘削を奨励することで、我々は経済だけでなく技術も新たな進歩を遂げることができる。"
  prifysgolion_cymru:0 "ウェールズの大学"
  prifysgolion_cymru_desc:0 "オワイン・グリンドゥールは、一つは北に、もう一つは南に、ウェールズに二つの大学を設立する計画であった。学術と芸術を奨励することで、我々は我々の偉大な国家が学術の中心になることを期待することができる。"
- welsh_church:0 "ウェールズの教会"
- welsh_church_desc:0 "ウェールズの教会は他の教会とは独立し、独自の教会機構を持っていた。我々はローマ人がブリテンの海岸を離れ、我々を見捨てるはるか前からのキリスト教徒である。我々の土地は、ケルト系のキリスト教世界の強固な遺産と共に、多くのキリスト教の聖人たちの地である。"
+ welsh_church:0 "ウェールズ国教会"
+ welsh_church_desc:0 "ウェールズ国教会は他の国教会とは独立し、独自の教会機構を持っていた。我々はローマ人がブリテンの海岸を離れ、我々を見捨てるはるか前からのキリスト教徒である。我々の土地は、ケルト系のキリスト教世界の強固な遺産と共に、多くのキリスト教の聖人たちの地である。"
  west_african_ideas:0 "西アフリカのアイデア"
  west_african_ideas_start:0 "西アフリカの伝統"
  west_african_ideas_bonus:0 "西アフリカの宿願"
