--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -138,7 +138,7 @@
  anglican_events.2.b:0 "清教徒を対象とする。"
  anglican_events.2.c:0 "政治的脅威を対象とする。"
  anglican_events.3.t:0 "予言と説教"
- anglican_events.3.d:1 "聖公会の教会は聖職者が説教に多くの時を費やすことを求めていない。毎月、あるいは四半期ごとの説教が法律に従って適切であり、これは通常、説教集から直接引用される。\n\n多くの教区民たちは宗教的奉仕へのより個人的かつ関わりのある取り組みを望んでおり、教育を受けた講演者が自分の町で説教するよう、支払う金を貯めることにより、自身で問題を解決している。これらの講演者は、しかし、常に最も正統な神学的見解を持っているとは限らない。多くの場合、最も熱心に説教するのは最も急進的なアイデアを持つ人々であり、したがって、これらの個人的な説教は、清教徒の運動と関連している。\n\nより宗教的に博識な民衆に強みがあるものの、清教徒を取り締まることは教会の権威を高めるだろう。"
+ anglican_events.3.d:1 "聖公会は聖職者が説教に多くの時を費やすことを求めていない。毎月、あるいは四半期ごとの説教が法律に従って適切であり、これは通常、説教集から直接引用される。\n\n多くの教区民たちは宗教的奉仕へのより個人的かつ関わりのある取り組みを望んでおり、教育を受けた講演者が自分の町で説教するよう、支払う金を貯めることにより、自身で問題を解決している。これらの講演者は、しかし、常に最も正統な神学的見解を持っているとは限らない。多くの場合、最も熱心に説教するのは最も急進的なアイデアを持つ人々であり、したがって、これらの個人的な説教は、清教徒の運動と関連している。\n\nより宗教的に博識な民衆に強みがあるものの、清教徒を取り締まることは教会の権威を高めるだろう。"
  anglican_events.3.a:0 "これらの非国教徒の説教を禁止する。"
  anglican_events.3.b:0 "彼らが望むように説教させよう。"
  anglican_events.4.t:0 "教義に関する議会での議論"
@@ -169,7 +169,7 @@
  anglican_events.9.a:0 "より多くの祝祭日を廃止する。"
  anglican_events.9.b:0 "彼らの楽しみを持たせておこう。"
  anglican_events.10.t:0 "清教徒たちは植民地へと去る"
- anglican_events.10.d:0 "清教徒たちはここしばらく、$COUNTRY$の教会の階層と教義を批判している。改革は、彼らの目には、単に教皇を[Root.Monarch.GetTitle]に置き換えただけであり、彼らは国家の改革への怠惰な態度を公然と非難している。神学的な論争はさておき、現在の[Root.Monarch.GetTitle]の傾向に応じて、清教徒もまた、非国教徒として迫害されてきた。最終的に、ヨーロッパの宗教問題に疲れた多くの清教徒たちは、新世界への移住を決断した。彼らは植民地事業を組織し、アメリカで新しい居留地を設立するための勅許を求めている。"
+ anglican_events.10.d:0 "清教徒たちはここしばらく、$COUNTRY$国教会の階層と教義を批判している。改革は、彼らの目には、単に教皇を[Root.Monarch.GetTitle]に置き換えただけであり、彼らは国家の改革への怠惰な態度を公然と非難している。神学的な論争はさておき、現在の[Root.Monarch.GetTitle]の傾向に応じて、清教徒もまた、非国教徒として迫害されてきた。最終的に、ヨーロッパの宗教問題に疲れた多くの清教徒たちは、新世界への移住を決断した。彼らは植民地事業を組織し、アメリカで新しい居留地を設立するための勅許を求めている。"
  anglican_events.10.b:1 "設立された植民地に彼らを統合する。"
  anglican_events.10.a:1 "彼ら自身の居留地を建設させよう。"
  anglican_events.11.t:0 "祭服を巡る論争"
