--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -5194,7 +5194,7 @@
  dutch_control_of_taiwan_title:0 "台湾を支配"
  dutch_control_of_taiwan_desc:0 "台湾の島は、中国との交易にとって戦略的に重要な位置にある。我々が島を所有することができれば、我々は大きな利益を得るだろう。"
  embrace_the_reformation_title:0 "カルヴァン主義を受入"
- embrace_the_reformation_desc:0 "カルヴァンの教えに基づく、オランダの改革派の教会がますます強くなっていることは、すでに明らかである。我々はこれを確立された教会とする必要がある。"
+ embrace_the_reformation_desc:0 "カルヴァンの教えに基づく、オランダの改革派教会がますます強くなっていることは、すでに明らかである。我々はこれを確立された教会とする必要がある。"
  take_malacca_from_portugal_title:0 "ポルトガルからマラッカを奪取"
  take_malacca_from_portugal_desc:0 "マラッカは東インド諸島の玄関口に位置している。それを支配する者は、香辛料貿易を支配する。我々はポルトガル人からこれを奪取しなければならない。"
  take_ceylon_from_portugal_title:0 "セイロン島の解放"
@@ -7658,7 +7658,7 @@
  MOVE_TRADE_PORT_LONG:0 "あなたの交易首都を移動することは、新しいノードがより豊かで、あなたがそこでより多くの交易力を生成する能力を持っているなら、有利かもしれません。"
  MOVE_TRADE_PORT_COST:0 "移動のためのコストは$POWER$£dip£です。"
  PROVINCEVIEW_OTHERS_TRADE_PORT:0 "$COUNTRY$の交易首都です"
- CHURCH_OF:0 "$COUNTRY$の教会"
+ CHURCH_OF:0 "$COUNTRY$国教会"
  CHURCH_POWER_MONTHLY:0 "毎月$DIFF$（基本 §Y$SKILL$§!の君主力＊§Y$SCALE$§! $MOD$の補正）\n\n以下の補正が適用されます：\n"
  NO_ASPECT_SELECTED:0 "アスペクトは選択されていません"
  CHANGE_ASPECT_TOO_LOW_POWER:2 "§R他の$ASPECTS_SHORT$§!を適用可能にするには教会権力が$COST$以上必要です（現在$CURRENT|Y$）\n"
