--- a/source/localisation/missions_l_english.yml
+++ b/source/localisation/missions_l_english.yml
@@ -148,47 +148,47 @@
  portugal_conquest_of_hormuz_desc:0 "ホルムズ海峡は、インド、イランとイラク・アラビーの間の交易の流れを支配するためどうしても必要である。ホルムズ島の支配権を掌握することで、地元の交易を支配することができ、かつて確立した海洋帝国への権利を主張することができる。"
  establish_colonial_nation_mission_canada_title:0 "カナダに植民地国家を設立"
  establish_colonial_nation_mission_canada_desc:0 "カナダにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_canada_tooltip:0 "そこに植民地国家を形成するため、カナダ植民地に、5つの都市レベルの植民地を確立せよ。"
+ establish_colonial_nation_mission_canada_tooltip:0 "カナダ植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_alaska_title:0 "アラスカに植民地国家を設立"
  establish_colonial_nation_mission_alaska_desc:0 "アラスカにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_alaska_tooltip:0 "そこに植民地国家を形成するため、アラスカ植民地に、5つの都市レベルの植民地を確立せよ。"
+ establish_colonial_nation_mission_alaska_tooltip:0 "アラスカ植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_eastern_america_title:0 "東アメリカに植民地国家を設立"
  establish_colonial_nation_mission_eastern_america_desc:0 "東アメリカにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_eastern_america_tooltip:0 "そこに植民地国家を形成するため、東アメリカ植民地に、5つの都市レベルの植民地を確立せよ。"
+ establish_colonial_nation_mission_eastern_america_tooltip:0 "東アメリカ植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_australia_title:0 "オーストラリアに植民地国家を設立"
  establish_colonial_nation_mission_colonial_australia_desc:0 "オーストラリアにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_australia_tooltip:0 "そこに植民地国家を形成するため、オーストラリア植民地域の5つの州を都市化する。"
+ establish_colonial_nation_mission_colonial_australia_tooltip:0 "オーストラリア植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_la_plata_title:0 "ラプラタに植民地国家を設立"
  establish_colonial_nation_mission_colonial_la_plata_desc:0 "ラプラタにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_la_plata_tooltip:0 "そこに植民地国家を形成するため、ラプラタ植民地域の5つの州を都市化する"
+ establish_colonial_nation_mission_colonial_la_plata_tooltip:0 "ラプラタ植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_peru_title:0 "ペルーに植民地国家を設立"
  establish_colonial_nation_mission_colonial_peru_desc:0 "ペルーにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_peru_tooltip:0 "そこに植民地国家を形成するため、ペルー植民地に、5つの都市レベルの植民地を確立する"
+ establish_colonial_nation_mission_colonial_peru_tooltip:0 "ペルー植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_colombia_title:0 "コロンビアに植民地国家を設立"
  establish_colonial_nation_mission_colonial_colombia_desc:0 "コロンビアにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_colombia_tooltip:0 "そこに植民地国家を形成するため、コロンビア植民地域の5州を都市化する。"
+ establish_colonial_nation_mission_colonial_colombia_tooltip:0 "コロンビア植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_the_carribean_title:0 "カリブ海に植民地国家を設立"
  establish_colonial_nation_mission_colonial_the_carribean_desc:0 "カリブ海における入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_the_carribean_tooltip:0 "そこに植民地国家を形成するため、カリブ海植民地域の5州を都市化する。"
+ establish_colonial_nation_mission_colonial_the_carribean_tooltip:0 "カリブ海植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_mexico_title:0 "メキシコに植民地国家を設立"
  establish_colonial_nation_mission_colonial_mexico_desc:0 "メキシコにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_mexico_tooltip:0 "そこに植民地国家を形成するため、メキシコ植民地域の5州を都市化する。"
+ establish_colonial_nation_mission_colonial_mexico_tooltip:0 "メキシコ植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_california_title:0 "カリフォルニアに植民地国家を設立"
  establish_colonial_nation_mission_colonial_california_desc:0 "カリフォルニアにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_california_tooltip:0 "そこに植民地国家を形成するため、カリフォルニア植民地域の5州を都市化する。"
+ establish_colonial_nation_mission_colonial_california_tooltip:0 "カルフォルニア植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_louisiana_title:0 "ルイジアナに植民地国家を設立"
  establish_colonial_nation_mission_colonial_louisiana_desc:0 "ルイジアナにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_louisiana_tooltip:0 "そこに植民地国家を形成するため、ルイジアナ植民地域の5州を都市化する。"
+ establish_colonial_nation_mission_colonial_louisiana_tooltip:0 "ルイジアナ植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  establish_colonial_nation_mission_colonial_brazil_title:0 "ブラジルに植民地国家を設立"
  establish_colonial_nation_mission_colonial_brazil_desc:0 "ブラジルにおける入植者は我々の支援を必要としている。自給自足できるようになるまで、我々は植民地を拡大しなければならない。"
- establish_colonial_nation_mission_colonial_brazil_tooltip:0 "そこに植民地国家を形成するため、ブラジル植民地域の5州を都市化する。"
+ establish_colonial_nation_mission_colonial_brazil_tooltip:0 "ブラジル植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  discover_ivory_coast_node_title:0 "象牙海岸で待ち構えるもの"
  discover_ivory_coast_node_desc:0 "アフリカの周辺に、アジアに向かう航路が存在することは長い間語られてきた。我々がアジアの香辛料のための新しい交易路を確立したいのであれば、それを探求するべきだ。"
  discover_ivory_coast_tt:0 "象牙海岸のノードを発見"
  ivory_coast_trade:0 "象牙海岸の交易利権"
  colony_in_ivory_coast_node_title:0 "西アフリカでの足がかり"
  colony_in_ivory_coast_node_desc:0 "アフリカ沿岸の探検により、航海は長くなることが明らかである。したがって、我々は交易艦隊が係留するための港を取得しなければならない。"
- colonise_ivory_coast_tt:0 "西アフリカの交易地域において、3つの都市レベルの植民地を開発する。"
+ colonise_ivory_coast_tt:0 "西アフリカ交易地域で、3つの植民地を都市レベルに開発せよ。"
  atlantic_trading_post_tt:1 "§Y象牙海岸§!のすべての州を所有していることで、交易ノードは10年間、以下の補正を獲得します：\n地方交易力：§G+1.00§!\n地方交易力：§G+20%§!\n交易額：§G+0.50§!"
  south_african_trading_post_tt:1 "§Y南アフリカ§!のすべての州を所有していることで、交易ノードは10年間、以下の補正を獲得します：\n地方交易力：§G+1.00§!\n地方交易力：§G+20%§!\n交易額：§G+0.50§!"
  discover_good_hope_node_title:0 "さらに南で待ち構えるもの"
@@ -197,7 +197,7 @@
  good_hope_trade:0 "喜望峰の交易利権"
  colony_in_good_hope_node_title:0 "南アフリカでの足がかり"
  colony_in_good_hope_node_desc:0 "アフリカ沿岸の探検により、航海は長くなることが明らかである。したがって、我々は交易艦隊が係留するために喜望峰における港を取得しなければならない。"
- colonise_good_hope_tt:0 "南アフリカの交易地域において、都市レベルの植民地を開発する。"
+ colonise_good_hope_tt:0 "南アフリカ交易地域で、1つの植民地を都市レベルに開発せよ。"
  cape_trading_post_tt:0 "新たな植民地の交易額と交易力の一時的な上昇。"
  discover_zanzibar_node_title:1 "喜望峰を越えて"
  discover_zanzibar_node_desc:0 "アフリカ南部の海岸に到着したことで、我々はアジアの富を見い出す新しい海に踏み入ることができる。"
