--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -157,7 +157,7 @@
  IS_CLIENT_OF:0 "以下の衛星国である："
  IS_NOT_CLIENT:0 "衛星国ではない"
  IS_CLIENT:0 "衛星国である"
- IS_NOT_COLONY_OF:0 "以下の植民地でない："
+ IS_NOT_COLONY_OF:0 "以下の植民地ではない："
  IS_COLONY_OF:0 "以下の植民地である："
  IS_NOT_COLONY:0 "植民地ではない"
  IS_COLONY:0 "植民地である"
@@ -165,23 +165,23 @@
  IS_VASSAL:0 "属国である"
  western_europe_coast:0 "西ヨーロッパ"
  VASSAL_TOO_BACKWARD:0 "この国は属国となるには遅れすぎており、保護領としかなれません。"
- VASSAL_EFF_EXPL:0 "我々の属国からの収入は以下の要因により補正されています：\n"
- COLON_EFF_EXPL:0 "我々の植民地からの収入は以下の要因により補正されています：\n"
+ VASSAL_EFF_EXPL:0 "属国からの収入は以下の要因により補正されています：\n"
+ COLON_EFF_EXPL:0 "植民地からの収入は以下の要因により補正されています：\n"
  LEDGER_COUNTRY_INCOME:0 "収入比較"
- NEWCOLONIALCOUNTRY_SETUP:0 "国家の海外の州から植民地国家が形成された時。"
+ NEWCOLONIALCOUNTRY_SETUP:0 "国家の海外州から植民地国家が形成された時。"
  NEWCOLONIALCOUNTRY_HEADER:0 "$MESSENGER$"
  NEWCOLONIALCOUNTRY_1:0 "新たな植民地国家！"
  NEWCOLONIALCOUNTRY_2:0 "$NAME$"
- NEWCOLONIALCOUNTRY_3:0 "以下の海外州により構成されました"
- NEWCOLONIALCOUNTRY_4:0 "$REGION$にある$COUNTRY$"
- NEWCOLONIALCOUNTRY_5:0 "新国家はその母国から独立した地位となりますが、遠い将来において、失敗すれば、自由を奪われるかもしれません。"
+ NEWCOLONIALCOUNTRY_3:0 "以下の海外州から構成されました"
+ NEWCOLONIALCOUNTRY_4:0 "$REGION$にある$COUNTRY$領土"
+ NEWCOLONIALCOUNTRY_5:0 "新国家は母国から独立した領土ですが、遠い将来、管理に失敗した際には自由を奪われるかもしれません。"
  NEWCOLONIALCOUNTRY_6:0 ""
- NEWCOLONIALCOUNTRY_LOG:0 "$NAME$は$REGION$に形成されています。"
+ NEWCOLONIALCOUNTRY_LOG:0 "$REGION$で$NAME$が形成された。"
  NEWCOLONIALCOUNTRY_BTN1:0 "OK"
  NEWCOLONIALCOUNTRY_BTN2:0 "OK"
  NEWCOLONIALCOUNTRY_BTN3:0 "移動"
- NEWCOLONIALCOUNTRY_MAP:0 "新たな植民地国家だ！"
- SUBJECT_SORT_TYPE:0 "従属国の種類順"
+ NEWCOLONIALCOUNTRY_MAP:0 "新たな植民地国家！"
+ SUBJECT_SORT_TYPE:0 "従属国の種類で並べ替え"
  SUBJECT_SORT_NAME:0 "国名で並べ替え"
  SUBJECT_SORT_INCOME:0 "収入で並べ替え"
  SUBJECT_SORT_EFFICIENCY:0 "収入効率で並べ替え"
@@ -194,8 +194,8 @@
  SUBJECT_VASSAL_INCOME_LABEL:0 "属国収入："
  SUBECT_TOTAL_INCOME:0 "従属国総合収入："
  NO_TARIFFS_COUNTRIES:0 "植民地なし"
- SUBJECT_SORT_TRADE:0 "交易力順"
- SUBJECT_SORT_OPINION:0 "属国の関係順"
+ SUBJECT_SORT_TRADE:0 "交易力で並べ替え"
+ SUBJECT_SORT_OPINION:0 "属国との関係で並べ替え"
  SUBJECT_NO_COLONIES:0 "一つも植民地を有していない"
  SUBJECT_NO_VASSALS:0 "一つも属国を有していない"
  WE_ARE_AT_WAR:0 "戦争中である"
