Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -2670,7 +2670,7 @@
  MAPMODE_MORE:0 "§Y他のMAPモード§!"
  BUTTON_OUTLINER_IRO:0 "概要"
  BUTTON_OUTLINER_OPTIONS:0 "概要オプション"
- UNIT_ENABLE_PIRATES_HUNT:0 "海賊討伐"
+ UNIT_ENABLE_PIRATES_HUNT:0 "海賊狩り"
  NOT_YET_BUILT:0 "次の建造物：§Y$BUILDING$§W"
  HAS_BUILDING:0 "§Y$BUILDING$§W"
  CLICK_TO_BUILD:0 "§Y$BUILDING$§Wを建設"
